--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,11 +92,35 @@ img {
 
 .toolbar {
     width: 100%;
-    background-color: grey;
+    background-color: white;
     margin-bottom: 10px;
     height: 80px;
+    box-shadow: 0px 0px 7px #D1D1D1;
 }
 
-input{
+input {
     float: right;
+    position: relative;
+    margin-top: 23px;
+    width: 275px;
+    height: 26px;
+}
+
+.logo {
+    position: absolute;
+    margin-left: 10%;
+    margin-top: 23px;
+}
+
+body {
+    background-color: #F5F5F1;
+}
+
+.search{
+    margin-right: 0px;
+}
+
+.submit{
+    margin-right: 10%;
+    margin-left: -1px;
 }
