--- a/templates/home.html
+++ b/templates/home.html
@@ -11,23 +11,20 @@
     <div class="container">
         <div class="toolbar">
             <div class="logo">
-                <a href="https://www.etsy.com">HannahsEtsy</a>
+                <a href="#home">HannahsEtsy</a>
+                </div>
                 <form>
                    <input type="submit" class="submit">
                    <input type="search" class ="search" placeholder="Search">
                 </form>
-                <div class="cover">
-                </div>
-            </div>
         </div>
-        <div class="details_content">
-        <a href="#">
+        <div class="content grid grid-2-400 grid-4-900 grid-6-1200">
+            <a href="#">
                 <img src="">
-                    <p></p>
-                    <p></p> 
-                
+                <p></p>
+                <p></p>
             </a>
-            </div>
+   
 </body>
 
 </html>
