--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,8 +107,14 @@ input {
 .logo {
     position: absolute;
     margin-left: 10%;
-    margin-top: 23px;
+    margin-top: 8px;
     box-shadow: none;
+    span {
+        color: #9B9B9B;
+        font-size: 30px;
+        font-style: initial;
+        font-family: Times New Roman;
+    }
 }
 
 body {
@@ -119,18 +125,27 @@ body {
     float: right;
     position: relative;
     margin-top: 23px;
-    border-right: 0px;
-    border: 1px solid grey;
+    border-right: 0;
+    border: 1px solid #DBDBDB;
+    height: 28px;
+    box-shadow: inset 0px 0px 4px #E5E5E5;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    width: 235px;
+
 }
 
 .submit {
     margin-right: 10%;
     margin-left: 0px;
-    height: 26px;
+    height: 32px;
     background-color: #3F98BB;
     border: 0px;
     color: white;
     border-left: 0px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    width: 69px;
 }
 
 a {
@@ -140,23 +155,86 @@ a {
     overflow: hidden;
     border-radius: 3px;
     box-shadow: 0px 0px 2px grey;
+    text-decoration: none;
+    color: black;
+    font-family: Arial;
 }
 
 img {
-    width: 231px;
+    width: 200px;
     height: 196px;
     margin: 8px;
     margin-bottom: 0px;
 }
 
 .details {
-    border: 1px solid black;
-    margin: 10%;
+    background-color: white;
+    margin: 8%;
+    margin-top: 3%;
+    border-radius: 5px;
+    box-shadow: 0px 0px 2px #A5A5A5;
 }
 
-.desc_title {
-    border: 1px solid black;
-    width: 300px;
-    height: 300px;
+.greenpart {
+    background-color: #E4F3D9;
     float: left;
+    width: 425px;
+    margin: 2%;
+    border-radius: 5px;
 }
+
+.det_img {
+    float: left;
+    width: 500px;
+    height: 450px;
+    margin: 2%;
+    margin-left: 3.5%;
+}
+
+.title_cont {
+    background-color: white;
+    margin: 3%;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 1px;
+}
+
+pre {
+    color: blue;
+    font-family: Arial;
+    font-size: 12px;
+}
+
+.atc {
+    width: 102.7%;
+    margin-bottom: 3%;
+    margin-top: 3%;
+    height: 37px;
+}
+
+.desc_cont {
+    width: 490px;
+    margin-left: 4%;
+    display: inline-block;
+}
+
+.bluepart {
+    background-color: grey;
+    width: 425px;
+    height: 382px;
+    position: relative;
+    display: inline-block;
+}
+
+.logo a {
+    box-shadow: 0 0 0;
+    color: #f56400;
+    font-size: 36px;
+    font-style: normal;
+    font-family: Times New Roman;
+}
+
+span {
+    color: green;
+}
+
