--- a/scss/style.scss
+++ b/scss/style.scss
@@ -223,6 +223,7 @@ pre {
     height: 382px;
     position: relative;
     display: inline-block;
+    margin-left: 2%;
 }
 
 .logo a {
@@ -236,4 +237,5 @@ pre {
 span {
     color: green;
 }
+
 
